--- a/index.html
+++ b/index.html
@@ -9,7 +9,19 @@
     <title>News G2</title>
 </head>
 <body>
+   <header class="header">
+        <a href="#">
+            <img src="./assets/img/g2_4.png" alt="g2-news logo branco">
+        </a>
+        <nav>
+            <ul class="navbar-items">
+                <li><a href="#">Esportes</a></li>
+                <li><a href="#">Dia a dia</a></li>
+                <li><a href="#"> Trend-topics</a></li>
+            </ul>
+        </nav>
 
+   </header>
         <!-- inicio da div container  -->
     
     
