--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         <div class="container">
 
             
+            <main>
+                <p>teste</p>
+            </main>
             
             <footer>
                 <p>1234</p>
