--- a/noticia.html
+++ b/noticia.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +9,11 @@
     <link rel="stylesheet" href="./css/noticia.css">
     <title>News G2</title>
 </head>
+
 <body>
-    
+    <div class="container">
+
+    </div>
 </body>
+
 </html>
