--- a/noticia.html
+++ b/noticia.html
@@ -7,11 +7,113 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/fonts.css">
     <link rel="stylesheet" href="./css/noticia.css">
+    <script src="https://kit.fontawesome.com/a290182793.js"></script>
     <title>News G2</title>
 </head>
 
 <body>
     <div class="container">
+
+        <main class="main">
+            <section class="segunda-parte">
+                <div>
+                    <p class="texto"> Crowds waited for Lewis’ body at the foot of the bridge, where he was met by
+                        Alabama state
+                        troopers,
+                        who
+                        safely escorted him across and on to the state capitol.
+
+                        “His final march, that final crossing, so different than the first, speaks to the legacy that he
+                        leaves
+                        behind and the lives that he changed,” Sewell said. "It’s poetic justice that this time, Alabama
+                        state
+                        troopers will see John to his safety. "
+
+
+                        As the horse-drawn caisson approached the bridge, those in the masses on the sidewalk could be
+                        heard
+                        singing for Lewis. In an emotional moment, the voices stopped as Lewis' casket began to make its
+                        way
+                        across the bridge in silent reverence.
+
+                        Lewis, who died earlier this month at the age of 80, made his last journey across the Edmund
+                        Pettus
+                        Bridge with only his family to join him.
+
+                        Lewis' son, brothers and sister followed behind the caisson along Lewis' longtime chief of staff
+                        wearing
+                        shirts emblazoned with the words "Good Trouble," a nod to Lewis' view on activism.
+                    </p>
+                </div>
+
+
+                <div class="imagem">
+                    <img src="./assets/img/g2_3.png" alt="">
+                    he casket of Rep. John Lewis moves over the Edmund Pettus Bridge by horse drawn carriage during
+                    a
+                    memorial service for Lewis in Selma, Ala., on July 26, 2020.
+                    John Bazemore / AP
+                </div>
+
+                <div>
+                    <p class="texto">
+                        The 16-term lawmaker, often called the conscience of Congress, was a giant of the civil
+                        rights
+                        movement of the 1960s. Lewis was only 25 when he believed Alabama troopers would kill him on
+                        the
+                        peaceful march for voting rights across the bridge on March 7, 1965, known today as “Bloody
+                        Sunday.”
+
+                        Lewis suffered a fractured skull and was one of dozens of nonviolent protesters who were
+                        hospitalized. News coverage of the brutal beatings prompted increased pressure on Congress
+                        to
+                        pass
+                        the 1965 Voting Rights Act, to bar states from enforcing discriminatory laws that had long
+                        hindered
+                        prospective Black voters.
+
+                        And though Lewis is possibly best known for his march in Selma, he had already emerged as a
+                        leading
+                        voice in the fight for equal rights and had been arrested a number of times for the cause by
+                        that
+                        time.
+                    </p>
+                </div>
+            </section>
+
+            <section class="caixinha">
+                <h2>related topics</h2>
+                <div class="cards">
+                    <div class="card">
+                        <header class="card-header">
+                            <div class="card1-img">
+
+                            </div>
+
+                        </header>
+                        
+                        <main>
+                            <h3>
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore ipsam incidunt
+                                
+
+                            </h3>
+                        </main>
+                        <footer>
+                            <i class="far fa-heart"></i>
+                        </footer>
+                    </div>
+
+
+                </div>
+
+
+
+
+
+            </section>
+        </main>
+
 
     </div>
 </body>
