--- a/index.html
+++ b/index.html
@@ -7,12 +7,29 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/fonts.css">
     <link rel="stylesheet" href="./css/styles.css">
+    <script src="https://kit.fontawesome.com/a290182793.js"></script>
     <title>News G2</title>
 </head>
 
 <body>
     <div class="container">
-
+        <main class="main">
+            <section class="news-section">
+                <nav class="news-nav">
+                    <ul class="nav-items">
+                        <li>
+                            <a href="#" class="news-section-links">Sports</a>
+                            <a href="#" class="news-section-links">Politics</a>
+                            <a href="#" class="news-section-links">
+                                Technology</a>
+                            </li>
+                            <li>
+                                <i class="far fa-newspaper"></i>
+                            </li>
+                        </ul>
+                </nav>
+            </section>
+        </main>
     </div>
 </body>
 
