att da primeira parte da pagina  html noticia

--- a/noticia.html
+++ b/noticia.html
@@ -12,8 +12,79 @@
 
 <body>
     <div class="container">
+        <main>
+            <section class="headline">
+                <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit</h1>
+            </section>
 
+            <section class="image-container">
+                <img src="/assets/img/g2_3.png" alt="imagem 144">
+            </section>
+
+            <section class="article-details">
+                <div class="article-header">
+                    <span class="time">Time| </span>
+                    <span class="author"> Author </span>
+                    <span class="read-time">| min </span>
+                </div>
+                <div class="article-content">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda nesciunt provident repellendus
+                        quas
+                        labore sequi eveniet pariatur dolorem accusantium? Quisquam, perspiciatis quod? Expedita modi
+                        veritatis
+                        vel neque aliquam quia commodi.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit perferendis culpa vitae saepe,
+                        laboriosam sunt deserunt pariatur laudantium natus molestias ex, inventore porro omnis eligendi
+                        eaque
+                        adipisci minus tempore alias.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto quam suscipit exercitationem
+                        earum
+                        perferendis veritatis eaque, corrupti odio expedita illo facilis voluptatibus voluptatum hic id
+                        sit
+                        vitae, aut voluptas? Nobis!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit animi a voluptas, magnam modi
+                        unde,
+                        voluptates, consectetur magni deleniti saepe distinctio repellat incidunt ea doloribus autem
+                        tempore
+                        maxime quidem illum.</p>
+                </div>
+                <div class="article-footer">
+                    <div class="interaction-icons">
+                        <span class="likes">❤️ 100</span>
+                        <span class="comments">💬 100</span>
+                        <span class="share">🔗</span>
+                        <span class="bookmark">🔖</span>
+                    </div>
+                    <div class="article-summary">
+                        <hr>
+                        <p><strong>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae sint assumenda
+                                temporibus
+                                obcaecati quae ipsum, ut velit, natus laudantium voluptatem dolorum architecto
+                                distinctio id
+                                error blanditiis et dolores officiis optio!</strong></p>
+                    </div>
+                </div>
+            </section>
+        </main>
+
+        <aside class="sidebar">
+            <div class="recommended">
+                <h2>Recomendado</h2>
+                <div class="recommended-item">
+                    <img src="/assets/img/g2_3.png" alt="Imagem 23">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                </div>
+                <div class="recommended-item">
+                    <img src="/assets/img/g2_3.png" alt="imagem 2">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                </div>
+            </div>
+        </aside>
     </div>
+</body>
+
+</html>
+</div>
 </body>
 
 </html>
