--- a/noticia.html
+++ b/noticia.html
@@ -69,7 +69,7 @@
 
         <aside class="sidebar">
             <div class="recommended">
-                <h2>Recomendado</h2>
+                <h2>Recommends</h2>
                 <div class="recommended-item">
                     <img src="/assets/img/g2_3.png" alt="Imagem 23">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
