Finalização da News Section

--- a/index.html
+++ b/index.html
@@ -20,14 +20,148 @@
                         <li>
                             <a href="#" class="news-section-links">Sports</a>
                             <a href="#" class="news-section-links">Politics</a>
-                            <a href="#" class="news-section-links">
-                                Technology</a>
-                            </li>
-                            <li>
-                                <i class="far fa-newspaper"></i>
-                            </li>
-                        </ul>
+                            <a href="#" class="news-section-links">Technology</a>
+                            <a href="#" class="news-section-links">Favorites</a>
+                        </li>
+                        <li>
+                            <i class="far fa-newspaper"></i>
+                        </li>
+                    </ul>
                 </nav>
+
+                <ul class="cards">
+                    <li>
+                        <div class="notice-card">
+                            <header class="header-card">
+                                <img src="./assets/img/g2_3.png" alt="capa da notícia" class="notice-img">
+                            </header>
+                            <main class="main-card">
+                                <h3 class="notice-title">shdkajgfasdglkasadad</h3>
+                                <p class="notice-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                                    Ex repudiandae delectus magnam harum cum numquam maxime itaque maiores? Beatae nobis
+                                    non facere sapiente nam repellat ratione eligendi inventore quos quae?</p>
+                                <div class="notice-details">
+                                    <span class="notice-hour">2 hours ago</span>
+                                    <span class="notice-author">Yuri Leocadio</span>
+                                </div>
+                            </main>
+                            <footer class="footer-card">
+                                <i class="far fa-heart"></i>
+                                <i class="far fa-bookmark"></i>
+                            </footer>
+                        </div>
+                    </li>
+
+                    <li>
+                        <div class="notice-card">
+                            <header class="header-card">
+                                <img src="./assets/img/g2_3.png" alt="capa da notícia" class="notice-img">
+                            </header>
+                            <main class="main-card">
+                                <h3 class="notice-title">shdkajgfasdglkasadad</h3>
+                                <p class="notice-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                                    Ex repudiandae delectus magnam harum cum numquam maxime itaque maiores? Beatae nobis
+                                    non facere sapiente nam repellat ratione eligendi inventore quos quae?</p>
+                                <div class="notice-details">
+                                    <span class="notice-hour">2 hours ago</span>
+                                    <span class="notice-author">Yuri Leocadio</span>
+                                </div>
+                            </main>
+                            <footer class="footer-card">
+                                <i class="far fa-heart"></i>
+                                <i class="far fa-bookmark"></i>
+                            </footer>
+                        </div>
+                    </li>
+
+                    <li>
+                        <div class="notice-card">
+                            <header class="header-card">
+                                <img src="./assets/img/g2_3.png" alt="capa da notícia" class="notice-img">
+                            </header>
+                            <main class="main-card">
+                                <h3 class="notice-title">shdkajgfasdglkasadad</h3>
+                                <p class="notice-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                                    Ex repudiandae delectus magnam harum cum numquam maxime itaque maiores? Beatae nobis
+                                    non facere sapiente nam repellat ratione eligendi inventore quos quae?</p>
+                                <div class="notice-details">
+                                    <span class="notice-hour">2 hours ago</span>
+                                    <span class="notice-author">Yuri Leocadio</span>
+                                </div>
+                            </main>
+                            <footer class="footer-card">
+                                <i class="far fa-heart"></i>
+                                <i class="far fa-bookmark"></i>
+                            </footer>
+                        </div>
+                    </li>
+
+                    <li>
+                        <div class="notice-card">
+                            <header class="header-card">
+                                <img src="./assets/img/g2_3.png" alt="capa da notícia" class="notice-img">
+                            </header>
+                            <main class="main-card">
+                                <h3 class="notice-title">shdkajgfasdglkasadad</h3>
+                                <p class="notice-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                                    Ex repudiandae delectus magnam harum cum numquam maxime itaque maiores? Beatae nobis
+                                    non facere sapiente nam repellat ratione eligendi inventore quos quae?</p>
+                                <div class="notice-details">
+                                    <span class="notice-hour">2 hours ago</span>
+                                    <span class="notice-author">Yuri Leocadio</span>
+                                </div>
+                            </main>
+                            <footer class="footer-card">
+                                <i class="far fa-heart"></i>
+                                <i class="far fa-bookmark"></i>
+                            </footer>
+                        </div>
+                    </li>
+
+                    <li>
+                        <div class="notice-card">
+                            <header class="header-card">
+                                <img src="./assets/img/g2_3.png" alt="capa da notícia" class="notice-img">
+                            </header>
+                            <main class="main-card">
+                                <h3 class="notice-title">shdkajgfasdglkasadad</h3>
+                                <p class="notice-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                                    Ex repudiandae delectus magnam harum cum numquam maxime itaque maiores? Beatae nobis
+                                    non facere sapiente nam repellat ratione eligendi inventore quos quae?</p>
+                                <div class="notice-details">
+                                    <span class="notice-hour">2 hours ago</span>
+                                    <span class="notice-author">Yuri Leocadio</span>
+                                </div>
+                            </main>
+                            <footer class="footer-card">
+                                <i class="far fa-heart"></i>
+                                <i class="far fa-bookmark"></i>
+                            </footer>
+                        </div>
+                    </li>
+
+                    <li>
+                        <div class="notice-card">
+                            <header class="header-card">
+                                <img src="./assets/img/g2_3.png" alt="capa da notícia" class="notice-img">
+                            </header>
+                            <main class="main-card">
+                                <h3 class="notice-title">shdkajgfasdglkasadad</h3>
+                                <p class="notice-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                                    Ex repudiandae delectus magnam harum cum numquam maxime itaque maiores? Beatae nobis
+                                    non facere sapiente nam repellat ratione eligendi inventore quos quae?</p>
+                                <div class="notice-details">
+                                    <span class="notice-hour">2 hours ago</span>
+                                    <span class="notice-author">Yuri Leocadio</span>
+                                </div>
+                            </main>
+                            <footer class="footer-card">
+                                <i class="far fa-heart"></i>
+                                <i class="far fa-bookmark"></i>
+                            </footer>
+                        </div>
+                    </li>
+                </ul>
             </section>
         </main>
     </div>
