Integração dos cards com a API feito

--- a/noticia.html
+++ b/noticia.html
@@ -15,7 +15,7 @@
     <header class="header">
         <nav>
             <ul id="ul-header">
-                <li><img class="logo" src="./assets/img/g2_4.png" alt="logo News G2" /></li>
+                <li><img class="logo" src="./assets/img/logo.png" alt="logo News G2" /></li>
                 <li class="li-header"><a class="a-header" href="#">Política</a>
                     <a class="a-header" href="#">Esportes</a>
                     <a class="a-header" href="#">Tecnologia</a>
