--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <li>
                         <div class="notice-card">
                             <header class="header-card">
-                                <img src="./assets/img/g2_3.png" alt="capa da notícia" class="notice-img">
+                                <img src="./assets/img/logo.png" alt="capa da notícia" class="notice-img">
                             </header>
                             <div class="main-card">
                                 <h3 class="notice-title">shdkajgfasdglkasadad</h3>
@@ -115,7 +115,7 @@
                     <li>
                         <div class="notice-card">
                             <header class="header-card">
-                                <img src="./assets/img/g2_3.png" alt="capa da notícia" class="notice-img">
+                                <img src="./assets/img/logo.png" alt="capa da notícia" class="notice-img">
                             </header>
                             <div class="main-card">
                                 <h3 class="notice-title">shdkajgfasdglkasadad</h3>
@@ -137,7 +137,7 @@
                     <li>
                         <div class="notice-card">
                             <header class="header-card">
-                                <img src="./assets/img/g2_3.png" alt="capa da notícia" class="notice-img">
+                                <img src="./assets/img/logo.png" alt="capa da notícia" class="notice-img">
                             </header>
                             <div class="main-card">
                                 <h3 class="notice-title">shdkajgfasdglkasadad</h3>
@@ -159,7 +159,7 @@
                     <li>
                         <div class="notice-card">
                             <header class="header-card">
-                                <img src="./assets/img/g2_3.png" alt="capa da notícia" class="notice-img">
+                                <img src="./assets/img/logo.png" alt="capa da notícia" class="notice-img">
                             </header>
                             <div class="main-card">
                                 <h3 class="notice-title">shdkajgfasdglkasadad</h3>
@@ -181,7 +181,7 @@
                     <li>
                         <div class="notice-card">
                             <header class="header-card">
-                                <img src="./assets/img/g2_3.png" alt="capa da notícia" class="notice-img">
+                                <img src="./assets/img/logo.png" alt="capa da notícia" class="notice-img">
                             </header>
                             <div class="main-card">
                                 <h3 class="notice-title">shdkajgfasdglkasadad</h3>
@@ -203,7 +203,7 @@
                     <li>
                         <div class="notice-card">
                             <header class="header-card">
-                                <img src="./assets/img/g2_3.png" alt="capa da notícia" class="notice-img">
+                                <img src="./assets/img/logo.png" alt="capa da notícia" class="notice-img">
                             </header>
                             <div class="main-card">
                                 <h3 class="notice-title">shdkajgfasdglkasadad</h3>
