integração da API com a parte de Ultimas noticias

--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
 
             <div class="red-box">
                 <div class="white-box">
-                    <h1>Breaking News</h1>
+                    <h1 class="breaking-news-text">Breaking News</h1>
                 </div>
 
                 <div class="red-text">
-                    <p>Kenye West nao sei oq nao sei oq nao sei oq nao sei oq nao sei oq</p>
+                    <p class="breaking-news-title">Kenye West nao sei oq nao sei oq nao sei oq nao sei oq nao sei oq</p>
                 </div>
             </div>
 
