Integração da pagina noticia com a index, criação de mais tópicos, criação dos cards de tópicos recomendados e criação da função de embaralhar array

--- a/index.html
+++ b/index.html
@@ -21,16 +21,13 @@
                         <img class="logo" src="./assets/img/logo.png" alt="logo News G2" />
                     </li>
                     <li class="li-header">
-                        <a class="a-header" href="#topics" onclick="createTopic(event, 'sports')">Esportes</a>
-                        <a class="a-header" href="#topics" onclick="createTopic(event, 'politics')">Política</a>
-                        <a class="a-header" href="#topics" onclick="createTopic(event, 'technology')">Tecnologia</a>
+                        <a class="a-header" href="#topics" onclick="createTopicTrending(event, 'sports')">Esportes</a>
+                        <a class="a-header" href="#topics" onclick="createTopicTrending(event, 'politics')">Política</a>
+                        <a class="a-header" href="#topics" onclick="createTopicTrending(event, 'technology')">Tecnologia</a>
+                        <a class="a-header" href="#topics" onclick="createTopicTrending(event, 'health')">Saúde</a>
+                        <a class="a-header" href="#topics" onclick="createTopicTrending(event, 'science')">Ciência</a>
+                        <a class="a-header" href="#topics" onclick="createTopicTrending(event, 'entertainment')">Entretenimento</a>
                         <a class="a-header" href="#">Favoritos</a>
-                    </li>
-
-                    <li>
-                        <i class="far fa-user"></i>
-                        <i class="fas fa-search"></i>
-                        <i class="fas fa-bars"></i>
                     </li>
 
                 </ul>
@@ -83,10 +80,12 @@
                 <nav class="news-nav">
                     <ul class="nav-items">
                         <li>
-                            <a href="#" class="news-section-links" onclick="createTopic(event, 'sports')">Esportes</a>
-                            <a href="#" class="news-section-links" onclick="createTopic(event, 'politics')">Política</a>
-                            <a href="#" class="news-section-links"
-                                onclick="createTopic(event, 'technology')">Tecnologia</a>
+                            <a href="#" class="news-section-links" onclick="createTopicCard(event, 'sports')">Esportes</a>
+                            <a href="#" class="news-section-links" onclick="createTopicCard(event, 'politics')">Política</a>
+                            <a href="#" class="news-section-links" onclick="createTopicCard(event, 'technology')">Tecnologia</a>
+                            <a href="#" class="news-section-links" onclick="createTopicCard(event, 'health')">Saúde</a>
+                            <a href="#" class="news-section-links" onclick="createTopicCard(event, 'science')">Ciência</a>
+                            <a href="#" class="news-section-links" onclick="createTopicCard(event, 'entertainment')">Entretenimento</a>
                             <a href="#" class="news-section-links">Favoritos</a>
                         </li>
                         <li>
